# hanabi

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
hanabi/: audio.py  cli.py  image.py  lyrics.py  video.py
tests/: audio_test.py  image_test.py  lyrics_test.py
